# cdw_pdf_generator

./: .gitignore  README.md  clean.py  create_cohort.py  crunch_dataset_manifests.py  db_test.py  diff_exports.py  export_data.py  main.py  navify_generator.py  populate_data.py  pyproject.toml  test_clean.py  to_db.py  to_disk.py  utility.py
templates/: headline-diagnosis-template.html  mdt-report-template.html  pathology-report-template.html  radiology-report-template.html  surgical-report-template.html
