[tool.poetry]
name = "pdf-generator"
version = "0.1.0"
description = "pdf generator for datasets in OXPOS data product"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
Jinja2 = "^3.1.2"
pdfkit = "^1.0.0"
tdqm = "^0.0.1"
argparse = "^1.4.0"
pyodbc = "4.0.34"
pytest = "^7.4.0"
sqlalchemy = "^2.0.21"
polars = "^0.19.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
